apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  selector:
    app: mealie
  ports:
    - protocol: TCP
      port: 9000
      name: http
      targetPort: http
